[gd_scene load_steps=2 format=3 uid="uid://cw367a11cr7h3"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_x1p8u"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x1p8u")

[node name="MenuVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.5
offset_top = -116.5
offset_right = 125.5
offset_bottom = 116.5
grow_horizontal = 2
grow_vertical = 2

[node name="JoinLobbyButton" type="Button" parent="MenuVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Join Lobby"

[node name="CreateLobbyButton" type="Button" parent="MenuVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Create Lobby"

[node name="OptionsButton" type="Button" parent="MenuVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Options"

[node name="ExitGameButton" type="Button" parent="MenuVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Exit Game"

[node name="ServerListVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ServerListVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ServerListVBox/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ServerListVBox/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="ServerListVBox/MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 487.2)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ServerListVBox/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="ServerListVBox/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="ServerListVBox/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_font_sizes/font_size = 48
text = "Back"

[node name="OptionsVBox" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="OptionsVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsVBox/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GameplaySettingsButton" type="Button" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "Gameplay"

[node name="AudioSettingsButton" type="Button" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "Audio
"

[node name="VideoSettingsButton" type="Button" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "Video"

[node name="ControlsSettingsButton" type="Button" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "Controls"

[node name="ScrollContainers" type="PanelContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="GameplayScrollContainer" type="ScrollContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers"]
custom_minimum_size = Vector2(0, 380)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/GameplayScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/GameplayScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/GameplayScrollContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/GameplayScrollContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "Field of View"
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/GameplayScrollContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/GameplayScrollContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/GameplayScrollContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "50"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/GameplayScrollContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/GameplayScrollContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 60.0
max_value = 120.0
step = 5.0
value = 90.0
ticks_on_borders = true

[node name="VideoScrollContainer" type="ScrollContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers"]
visible = false
custom_minimum_size = Vector2(0, 380)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/VideoScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/VideoScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/VideoScrollContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/VideoScrollContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "Window Mode"
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/VideoScrollContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/VideoScrollContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OptionButton" type="OptionButton" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/VideoScrollContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
selected = 0
item_count = 3
popup/item_0/text = "Fullscreen"
popup/item_1/text = "Borderless Windowed"
popup/item_1/id = 1
popup/item_2/text = "Windowed"
popup/item_2/id = 2

[node name="AudioScrollContainer" type="ScrollContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers"]
visible = false
custom_minimum_size = Vector2(0, 380)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "Game Volume"
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "50"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
step = 5.0
value = 50.0
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "Voice Volume"
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "50"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
step = 5.0
value = 50.0
ticks_on_borders = true

[node name="MarginContainer3" type="MarginContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "Microphone Volume"
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer3/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Label" type="Label" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer3/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "50"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer3/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer3/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
step = 5.0
value = 50.0
ticks_on_borders = true

[node name="MarginContainer4" type="MarginContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer4"]
layout_mode = 2

[node name="Label" type="Label" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "Microphone Threshold"
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer4/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer4/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "50"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer4/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/AudioScrollContainer/VBoxContainer/MarginContainer4/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
step = 5.0
value = 50.0
ticks_on_borders = true

[node name="ControlsScrollContainer" type="ScrollContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers"]
visible = false
custom_minimum_size = Vector2(0, 380)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/ScrollContainers/ControlsScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="BackButton" type="Button" parent="OptionsVBox/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_font_sizes/font_size = 48
text = "Back"

[connection signal="pressed" from="MenuVBox/JoinLobbyButton" to="." method="_on_join_lobby_button_pressed"]
[connection signal="pressed" from="MenuVBox/CreateLobbyButton" to="." method="_on_create_lobby_button_pressed"]
[connection signal="pressed" from="MenuVBox/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MenuVBox/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
[connection signal="pressed" from="ServerListVBox/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/HBoxContainer/GameplaySettingsButton" to="." method="_on_gameplay_settings_button_pressed"]
[connection signal="pressed" from="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/HBoxContainer/AudioSettingsButton" to="." method="_on_audio_settings_button_pressed"]
[connection signal="pressed" from="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/HBoxContainer/VideoSettingsButton" to="." method="_on_video_settings_button_pressed"]
[connection signal="pressed" from="OptionsVBox/MarginContainer2/VBoxContainer/VBoxContainer/HBoxContainer/ControlsSettingsButton" to="." method="_on_controls_settings_button_pressed"]
[connection signal="pressed" from="OptionsVBox/MarginContainer2/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
